[package]
name = "solar-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "euler"
path = "src/euler.rs"

[dependencies]
gtk = { version = "0.8.0", package = "gtk4", features = ["v4_12"] }
scanf = "1.2.1"
